updated issue trakcker, marginal improvement to landing page

--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
-<html>
-	<h1>
-		Welcome to my website
-	</h1>
+<!DOCTYPE html>
+<html lang="en-US">
+	<head>
+		<h1>
+			Welcome to my website
+		</h1>
+	</head>
 	<body>
 		<h2>About Me</h2>
 		<p>
-		I'm a software devloper, currently building this website.
+		I'm Ian Manix, a software developer currently building this website.
 		</p>
 		<h2>What I'm working on:</h2>
 		<p>
-		This website.
-		Freelance work for VonaRosa.
-		ORC for an EVE-Online tournament tool.
+			<ul>
+				<li>This website.</li>
+				<li>Freelance work for VonaRosa.</li>
+				<li>ORC for an EVE-Online tournament tool.</li>
+			</ul>
 		</p>
+		<h3>I'm working on a <a href="">blog</a> as well</h3>
+		<h3>See my older projects <a href="">here</a></h3>
 	</body>
 </html>
